tests/fixtures/positive/naming/InvalidPackageDeclaration.kt
package com.wrong.path

// This file is at tests/fixtures/positive/naming/InvalidPackageDeclaration.kt
// but declares package com.wrong.path, which does not match the file path.

class InvalidPackageExample {
    fun doWork() {}
}
