tests/fixtures/negative/naming/InvalidPackageDeclaration.kt
package tests.fixtures.negative.naming

// Package declaration matches the file path.

class InvalidPackageDeclaration {
    fun doWork() {}
}
